--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#8A2BE2" />
     <meta
       name="description"
-      content="Mercurius Dynamics - Precision Engineering & Automation Excellence. Leading provider of CNC machining, industrial automation, valves, and OEM spares."
+      content="Mercurius Dynamics - Leading provider of CNC machining, industrial automation, valves, and OEM spares."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
@@ -61,7 +61,7 @@
       }
     </style>
     
-    <title>Mercurius Dynamics - Precision Engineering & Automation</title>
+    <title>Mercurius Dynamics</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
